# triplestore-benchmark

./: .gitignore  .gitpod.yml  README.md  benchmark-analysis.ipynb  lindas-benchmark.js  lindas-conformity.js  pyproject.toml  query-files.json
.github/workflows/: deploy.yaml
queries/: lindas-queries-2023-11.sparql
queries/CONSTRUCT/: 000369.rq  000370.rq  0004-20509x.rq  0016-6899x.rq  003675.rq  0061-1579x.rq  0062-1578x.rq  006563.rq  0081-1020x.rq  0084-905x.rq  0087-853x.rq  008921.rq  0090-853x.rq  0096-795x.rq  010151.rq  0106-728x.rq  0109-673x.rq  0119-549x.rq  0122-531x.rq  016443.rq  016527.rq  016536.rq  0362-71x.rq  037135.rq  0380-64x.rq  0393-60x.rq  0418-55x.rq  0447-48x.rq  0462-47x.rq  0468-47x.rq  0471-47x.rq  0500-44x.rq  0528-42x.rq  0530-42x.rq  0553-40x.rq  0569-40x.rq  0619-36x.rq  0640-35x.rq  0656-34x.rq  0661-34x.rq  (+22 more)
queries/SELECT/: 000165.rq  0003-21584x.rq  0005-19490x.rq  0009-9218x.rq  0020-3856x.rq  0022-3815x.rq  0026-3725x.rq  0029-3664x.rq  0030-3649x.rq  0031-3639x.rq  003284.rq  003316.rq  003329.rq  003350.rq  0034-3631x.rq  0039-2659x.rq  003968.rq  003976.rq  004023.rq  004037.rq  0043-2304x.rq  0045-1953x.rq  0046-1951x.rq  0054-1847x.rq  005431.rq  0056-1840x.rq  0060-1703x.rq  0063-1577x.rq  0064-1577x.rq  006567.rq  0066-1576x.rq  0067-1575x.rq  (+715 more)
results/: summary-benchmark-2024-08-08T05-04-32.json  summary-benchmark-2024-09-10T18-14-41.json
scenarios/: lindas.yaml
scripts/: fetch-iguana.sh  iguana.sh  scenario-lindas.sh  summary-benchmark.sh  summary-conformity-simple.sh  summary-conformity.sh  update-query-list.sh
