[tool.poetry]
name = "lindas-benchmark"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
notebook = "7.2.1"
pandas = "2.2.2"
itables = "2.1.4"
nbconvert = "7.16.4"
matplotlib = "3.9.1"
jupyterlite-core = "0.4.0"
jupyterlite-pyodide-kernel = "0.4.1"
jupyterlab = "4.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
