[tool.poetry]
name = "lindas-benchmark"
version = "0.1.0"
description = ""
authors = ["John Doe <john.doe@example.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
notebook = "7.2.2"
pandas = "2.2.2"
itables = "2.1.5"
nbconvert = "7.16.4"
matplotlib = "3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
